--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ permalink: /contact/
             <h4>Just Get In Touch!</h4>
             <div class="hline"></div>
                 <p>{{ site.about }}</p>
-                <form role="form" method="POST" action="//forms.brace.io/forwardcommandpost@gmail.com">
+                <form role="form" method="POST" action="//formspree.io/forwardcommandpost@gmail.com">
                   <div class="form-group">
                     <label for="name">Name</label>
                     <input type="email" class="form-control" name="name" id="name">
