--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ permalink: /contact/
                 <form role="form" method="POST" action="//formspree.io/forwardcommandpost@gmail.com">
                   <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="email" class="form-control" name="name" id="name">
+                    <input type="text" class="form-control" name="name" id="name">
                   </div>
                   <div class="form-group">
                     <label for="email">Email</label>
@@ -23,7 +23,7 @@ permalink: /contact/
                   </div>
                   <div class="form-group">
                     <label for="subject">Subject</label>
-                    <input type="email" class="form-control" name="_subject" id="subject">
+                    <input type="text" class="form-control" name="_subject" id="subject">
                   </div>
                   <div class="form-group">
                     <label for="message">Message</label>
