--- a/tag.html
+++ b/tag.html
@@ -1,19 +1,19 @@
 ---
 layout: blog
-title: Categories
-permalink: /category/
+title: Tags
+permalink: /tag/
 ---
 
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
             <! -- BLOG POSTS LIST -->
-            {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
-                <a class="anchor" id="{{ category.first }}"></a><h4>{{ category.first }}</h4>
+            {% for tag in site.tags %}
+                <a class="anchor" id="{{ tag.first }}"></a><h4>{{ tag.first }}</h4>
 
                 <div class="hline"></div>
                 <ul class="popular-posts">
-                    {% for post in site.categories[category.first] %}
+                    {% for post in site.tags[tag.first] %}
                         <li>
                             <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
                             <p><a href="{{ post.url }}">{{ post.title }}</a></p>
@@ -21,7 +21,7 @@ permalink: /category/
                         </li>
                     {% endfor %}
                 </ul>
-            {% endunless %}{% endfor %}
+            {% endfor %}
         </div><! --/col-lg-8 -->
 
         {% include sidebar.html %}
