--- a/category.html
+++ b/category.html
@@ -8,7 +8,7 @@ permalink: /category/
     <div class="row">
         <div class="col-lg-8">
             <! -- BLOG POSTS LIST -->
-            {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
+            {% for category in site.categories %}
                 <a class="anchor" id="{{ category.first }}"></a><h4>{{ category.first }}</h4>
 
                 <div class="hline"></div>
@@ -21,7 +21,7 @@ permalink: /category/
                         </li>
                     {% endfor %}
                 </ul>
-            {% endunless %}{% endfor %}
+            {% endfor %}
         </div><! --/col-lg-8 -->
 
         {% include sidebar.html %}
