Perform major site update.

--- a/about.html
+++ b/about.html
@@ -1,18 +1,11 @@
 ---
-layout: about
+layout: default
 title: About
 permalink: /about/
 ---
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
-        </div>
-        <div class="col-lg-6">
-            <h4>More About Our Organization</h4>
-            <p>Forward Command Post is an organization dedicated to improving gaming through its projects.</p>
-            <p><br/><a href="/contact/" class="btn btn-theme">Contact Us</a></p>
-        </div>
-    </div><! --/row -->
-</div><! --/container -->
+<p>Forward Command Post is an organization founded by tsc with the aim of hosting groundbreaking projects. Over time, the organization has expanded to include other like-minded individuals who collaborate on the latest and greatest innovations.</p>
+
+<h2>Members</h2>
+
+{% include members.html %}
